--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>I am root component</h1>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1 class="h1-title">I am root component</h1>
+            <hr>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
