--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,7 @@
-<button class="btn btn-primary" [disabled]="allowNewServer">Add New Server</button>
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onServerCreated()">Add New Server</button>
 <app-server></app-server>
 <app-server></app-server>
+
+<div class="alert alert-primary" role="alert">
+    <div class="lead">{{serverCreationStatus}}</div>
+</div>
