--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,7 @@
+<input class="form-control" type="text" (input)="onUpdateServerName($event)">
+<div class="p-4">
+    <div class="lead">{{serverName}}</div>
+</div>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onServerCreated()">Add New Server</button>
 <app-server></app-server>
 <app-server></app-server>
