--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,5 @@
 <input class="form-control" type="text" (input)="onUpdateServerName($event)">
+<input class="form-control" placeholder="{{serverName}}" type="text" [(ngModel)]="serverName">
 <div class="p-4">
     <div class="lead">{{serverName}}</div>
 </div>
